FISH-6768 fix call of all deprecated methods